--- a/src/app/components/forums/forums.component.css
+++ b/src/app/components/forums/forums.component.css
@@ -1,5 +1,5 @@
-.bgImage{
-    background-image: url("../../../resource/image/homepage/1200x747.jpg");
+.forumBgImage{
+    background-image: url("../../../resource/image/forums/1460x839.jpg");
     background-size: 100%;
     width: 100%;
     height : 100%;
@@ -21,7 +21,7 @@
 }
 @media screen and ( max-width: 1200px ) and ( min-width: 750px ){
     .bgImage {
-        background-image: url("../../../resource/image/homepage/1200x747.jpg");
+        background-image: url("../../../resource/image/forums/1460x839.jpg");
     }
 }
 @media screen and ( max-width: 750px ) and ( min-width: 640px ) {
