--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -304,6 +304,9 @@
             <!-- end team member -->
 
         </div>  	<!-- End row -->
-    </div>   	<!-- End container -->
+    </div>
+    <a href="javascript:;" id="scrollUp" (click)="scrollTop()" >
+            <i class="fa fa-angle-up fa-2x"></i>
+        </a>	<!-- End container -->
 </section>
 
