blog页面整体布局完善，添加时间轴，添加tag，添加轮播，更改背景图片 bug:chrome浏览器下滚到最下偶尔会有白条，不确定是代码问题还是自己鼠标问题，布局还有些bug需要调整，整体布局基本实现

--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -93,7 +93,7 @@
     </div>   	<!-- End container -->
 </section>
 
-<section id="counter" class="parallax-section" style="background-position: 50% 40px;">
+<section id="counter" class="parallax-section">
     <div class="container">
         <div class="row">
 
