--- a/src/app/components/forums/forums.component.css
+++ b/src/app/components/forums/forums.component.css
@@ -1,27 +1,62 @@
 .forumBgImage{
-    background-image: url("../../../resource/image/forums/1460x839.jpg");
-    background-size: 100%;
+    background: transparent url("../../../resource/image/forums/1460x839.png") no-repeat fixed;
     width: 100%;
-    height : 100%;
 }
+
 .text-center{
     text-align: center;
 }
 .forumContainer{
-    top: 10%;
+    top: 80px;
     left: -5%;
 }
+
+.list-group-item {
+    background-color: transparent !important;
+    border: 0 !important;
+}
+
+.events-body .row {
+    height: auto !important;
+}
+
+.pull-left {
+    float: left;
+}
+
 #context{
     height:600px;
     overflow-y: scroll;
 }
+
 #context::-webkit-scrollbar{
     width:0px;
     height:0px;
 }
+
+#scrollUp {
+    border: 1px solid #fff;
+    bottom: 15px;
+    color: #fff;
+    display: none;
+    padding: 8px 12px;
+    position: fixed;
+    right: 20px;
+    z-index: 600;
+}
+
+#scrollUp:hover {
+    background-color: #6cb670;
+    border: 1px solid #6cb670;
+}
+
+.editor {
+    margin-top: 50px;
+}
+
 @media screen and ( max-width: 1200px ) and ( min-width: 750px ){
     .bgImage {
-        background-image: url("../../../resource/image/forums/1460x839.jpg");
+        background-image: url("../../../resource/image/forums/1460x839.png");
     }
 }
 @media screen and ( max-width: 750px ) and ( min-width: 640px ) {
