--- a/src/app/components/forums/forums.component.html
+++ b/src/app/components/forums/forums.component.html
@@ -2,10 +2,134 @@
     <navbar></navbar>
     <div class="container forumContainer">
         <div class="row">
-            <div class="col-lg-3"></div>
-            <div class="col-lg-9">
-                <div [froalaEditor]></div>
+            <div class="col-lg-2">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <button type="button" class="btn btn-primary">Java</button>
+                    </li>
+                    <li class="list-group-item">
+                        <button type="button" class="btn btn-success">C++</button>
+                    </li>
+                    <li class="list-group-item">
+                        <button type="button" class="btn btn-info">JavaScript</button>
+                    </li>
+                    <li class="list-group-item">
+                        <button type="button" class="btn btn-warning">Kotlin</button>
+                    </li>
+                    <li class="list-group-item">
+                        <button type="button" class="btn btn-danger">Objective-c</button>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-lg-10">
+                <div class="VivaTimeline">
+                    <dl>
+                        <dt>May 2016</dt>
+                        <dd class="pos-left clearfix">
+                            <div class="circ"></div>
+                            <div class="time">Feb 03</div>
+                            <div class="events">
+                                <div class="events-header">Event Heading</div>
+                                <div class="events-body">
+                                    <div class="row">
+                                        <div class="col-md-6 pull-left">
+                                            <img class="events-object img-responsive img-rounded" src="../../../third-part/timeline/img/cat01.jpeg" />
+                                        </div>
+                                        <div class="events-desc">
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6 pull-left">
+                                            <img class="events-object img-responsive img-rounded" src="../../../third-part/timeline/img/dog02.jpeg" />
+                                        </div>
+                                        <div class="events-desc">
+                                            Morbi at nisi vitae mauris pretium egestas. Morbi placerat risus ligula, nec placerat urna porta vel. Nullam sollicitudin orci quis odio eleifend, ut facilisis orci lobortis. Vivamus sed lobortis odio. Nam volutpat, leo a ullamcorper luctus, sapien libero auctor est, sed semper massa turpis sed quam. Mauris posuere, libero in ultricies dignissim, lacus purus egestas urna, nec semper lorem tellus non eros. Nam at bibendum libero. Curabitur a ante et orci cursus tincidunt. Vivamus dictum, libero et rhoncus congue, nulla erat mollis dui, vitae cursus dui justo quis velit. In a tellus arcu. Nam at lobortis nisl. Donec consequat placerat eros, quis elementum mauris sodales a. Maecenas id feugiat velit. Phasellus dictum eleifend varius. Cras nec orci turpis. Aenean ut turpis nibh.
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6 pull-left">
+                                            <img class="events-object img-responsive img-rounded" src="../../../third-part/timeline/img/dog03.jpeg" />
+                                        </div>
+                                        <div class="events-desc">
+                                            Cras condimentum, metus ut vehicula euismod, odio massa pulvinar neque, id gravida neque est et sem. Proin consequat id nibh quis molestie. Quisque vehicula purus id purus elementum facilisis. Phasellus sodales nibh quis neque rhoncus aliquet. Nunc eget ipsum efficitur, pretium arcu et, gravida purus. Phasellus tempor lacus ac enim pulvinar elementum. Integer aliquet justo lacinia nunc tempus vulputate.
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="events-footer">
+                                    123
+                                </div>
+                            </div>
+                        </dd>
+                        <dt>Feb 2016</dt>
+                        <dd class="pos-right clearfix">
+                            <div class="circ"></div>
+                            <div class="time">Jan 21</div>
+                            <div class="events">
+                                <div class="events-header">A Very Very Looooooooooooooooooooong Event Heading</div>
+                                <div class="events-body">
+                                    <div class="row">
+                                        <div class="col-md-6 pull-left">
+                                            <img class="events-object img-responsive img-rounded" src="../../../third-part/timeline/img/cat01.jpeg" />
+                                        </div>
+                                        <div class="events-desc">
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6 pull-left">
+                                            <img class="events-object img-responsive img-rounded" src="../../../third-part/timeline/img/cat02.jpeg" />
+                                        </div>
+                                        <div class="events-desc">
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6 pull-left">
+                                            <img class="events-object img-responsive img-rounded" src="../../../third-part/timeline/img/cat03.jpeg" />
+                                        </div>
+                                        <div class="events-desc">
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="events-footer">
+
+                                </div>
+                            </div>
+                        </dd>
+                        <dd class="pos-left clearfix">
+                            <div class="circ"></div>
+                            <div class="time">Jan 07</div>
+                            <div class="events">
+                                <div class="events-header">Event Heading</div>
+                                <div class="events-body">
+                                    <div class="row">
+                                        <div class="col-md-6 pull-left">
+                                            <img class="events-object img-responsive img-rounded" src="../../../third-part/timeline/img/rabbit01.jpeg" />
+                                        </div>
+                                        <div class="events-desc">
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </dd>
+                        <dt>Jan 2016</dt>
+                        <dt>Dec 2015</dt>
+                        <dt>Oct 2015</dt>
+                        <dt>Sep 2015</dt>
+                        <dt>Aug 2015</dt>
+                    </dl>
+                </div>
+                <div [froalaEditor] class="editor"></div>
             </div>
         </div>
+        <div class="row" style="height: 300px">
+            这里是巴拉巴拉一堆介绍
+        </div>
+        <a href="javascript:;" id="scrollUp" (click)="scrollTop()" >
+            <i class="fa fa-angle-up fa-2x"></i>
+        </a>
     </div>
 </div>
