--- a/src/app/components/forums/forums.component.html
+++ b/src/app/components/forums/forums.component.html
@@ -120,9 +120,13 @@
                         <dt>Oct 2015</dt>
                         <dt>Sep 2015</dt>
                         <dt>Aug 2015</dt>
+                        <dd class="pos-left clearfix">
+                            <div id="editorBtn" class="openEditor"></div>
+                            <div class="events plusEvent"></div>
+                        </dd>
                     </dl>
                 </div>
-                <div [froalaEditor] class="editor"></div>
+                <div class="editor"></div>
             </div>
         </div>
         <div class="row" style="height: 300px">
