富文本编辑器

--- a/src/app/components/forums/forums.component.css
+++ b/src/app/components/forums/forums.component.css
@@ -1,6 +1,7 @@
 .forumBgImage{
     background: transparent url("../../../resource/image/forums/1460x839.png") no-repeat fixed;
     width: 100%;
+    background-size: 100%;
 }
 
 .text-center{
