--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,14 +6,14 @@
         <a class="navbar-brand" href="#">Bit Studio.</a>
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" [routerLink]="['/homepage']">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item" [ngClass] = "{active: url=='/homepage'}">
+                        <a class="nav-link pointer" [routerLink]="['/homepage']">Home </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link pointer" data-toggle="modal" data-target="#LogoutModal">Logout</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" [routerLink]="['/forums/home']">Forums</a>
+                <li class="nav-item" [ngClass] = "{active: url=='/forums/home'}">
+                    <a class="nav-link pointer" [routerLink]="['/forums/home']">Forums</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
