--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -2,12 +2,12 @@
     content: "";
     position: fixed;
     z-index:-1;
-    background-color: #ffffff;
+    background-color: #000000;
     opacity: 0.5;
     display: block;
     width: 100%;
     height: 45px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2), 0 7px 22px 0 rgba(0, 0, 0, 0.2);
 }
 .navbar{
     position: fixed!important;
