--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -53,7 +53,7 @@
     </div>
 </section>
 <section id="main-features">
-    <div class="container">
+    <div class="container wow bounceInUp">
         <div class="row">
             <!-- features item -->
             <div id="features" class="owl-carousel owl-theme" style="display: block; opacity: 1;">
@@ -94,7 +94,7 @@
 </section>
 
 <section id="counter" class="parallax-section">
-    <div class="container">
+    <div class="container wow bounceInUp">
         <div class="row">
 
             <!-- first count item -->
@@ -152,7 +152,7 @@
 </section>
 
 <section id="our-team">
-    <div class="container">
+    <div class="container wow bounceInUp">
         <div class="row">
 
             <!-- section title -->
