主页内容调整，样式调整

--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -18,6 +18,10 @@ html::-webkit-scrollbar{
 .bg-faded{
     background-color: transparent!important;
 }
+.bg-faded .btn{
+    margin-top: 50px;
+}
+
 .navbar{
     position: absolute!important;
     width: 100%;
