--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -6,7 +6,7 @@
                 <div class="jumbotron jumbotron-fluid bg-faded">
                     <div class="display-tc animate-box fadeIn animated-fast" data-animate-effect="fadeIn">
                         <h1 class="display-3">We are Bit Studio</h1>
-                        <button type="button" class="btn btn-outline-success btn-lg">Join Us</button>
+                        <button type="button" class="btn btn-outline-success btn-lg">加入我们</button>
                     </div>
                 </div>
             </div>
@@ -22,30 +22,30 @@
                         <i class="fa fa-lightbulb-o fa-4x"></i>
                     </div>
                     <div class="about-content text-center">
-                        <h3 class="ddd">We're Creative</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos provident laborum eum dignissimos</p>
+                        <h3 class="ddd">创新</h3>
+                        <p>每个人新奇的点子都会一步步落实到技术上<br>依靠现有的技术和我们奇特的想法<br>将他们慢慢变成现实</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 text-center wow bounceInUp" data-wow-duration="500ms" data-wow-delay="250ms">
                 <div class="wrap-about">
                     <div class="icon-box">
-                        <i class="fa fa-users fa-4x"></i>
+                        <i class="fa fa-heartbeat fa-4x"></i>
                     </div>
                     <div class="about-content text-center">
-                        <h3>We're Professional</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos provident laborum eum dignissimos</p>
+                        <h3>活力</h3>
+                        <p>团队平均年龄仅有24岁<br>我们可以有大把的活力去挥霍到<br>我们喜欢的技术上<br>这也将为我们的网站注入一股新鲜的活力</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 text-center wow bounceInUp" data-wow-duration="500ms" data-wow-delay="500ms">
                 <div class="wrap-about kill-margin-bottom">
                     <div class="icon-box">
-                        <i class="fa fa-users fa-4x"></i>
+                        <i class="fa fa-space-shuttle fa-4x"></i>
                     </div>
                     <div class="about-content text-center">
-                        <h3>We're Professional</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos provident laborum eum dignissimos</p>
+                        <h3>敏捷</h3>
+                        <p>采用迭代 循序渐进的方法进行开发<br>看重过程和工具<br>更看重个体和交互</p>
                     </div>
                 </div>
             </div>
@@ -59,11 +59,15 @@
             <div id="features" class="owl-carousel owl-theme">
                 <div class="item">
                     <i class="fa fa-css3 fa-3x" aria-hidden="true"></i>
-                    THIS IS CSS3
+                    使用css3技术最大限度的提升页面效果，信息展示形式与用户的交互体验
                 </div>
                 <div class="item">
                     <i class="fa fa-html5 fa-3x" aria-hidden="true"></i>
-                    THIS IS HTML5
+                    采用html5进行更加舒适的页面布局，让用户进行更加良好的用户体验
+                </div>
+                <div class="item">
+                    <i class="fa fa-cloud fa-3x" aria-hidden="true"></i>
+                    服务部署在百度云服务器，更好的保障了服务的稳定运行
                 </div>
             </div>
             <!-- /features item -->
@@ -79,10 +83,10 @@
             <div class="col-md-3 col-sm-6 col-xs-12 text-center  wow bounceInUp" data-wow-duration="500ms">
                 <div class="counters-item">
                     <div>
-                        <span class="countTo" data-speed="5000" data-to="320">320</span>
+                        <span class="countTo" data-speed="5000" data-to="2">2</span>
                     </div>
                     <i class="fa fa-users fa-3x"></i>
-                    <h3>Happy Clients</h3>
+                    <h3>团队人数</h3>
                 </div>
             </div>
             <!-- end first count item -->
@@ -91,10 +95,10 @@
             <div class="col-md-3 col-sm-6 col-xs-12 text-center  wow bounceInUp" data-wow-duration="500ms" data-wow-delay="200ms">
                 <div class="counters-item">
                     <div>
-                        <span class="countTo" data-speed="5000" data-to="565">565</span>
+                        <span class="countTo" data-speed="5000" data-to="37">37</span>
                     </div>
                     <i class="fa fa-check-square fa-3x"></i>
-                    <h3>Projects completed</h3>
+                    <h3>插件总数</h3>
                 </div>
             </div>
             <!-- end second count item -->
@@ -103,11 +107,10 @@
             <div class="col-md-3 col-sm-6 col-xs-12 text-center  wow bounceInUp" data-wow-duration="500ms" data-wow-delay="400ms">
                 <div class="counters-item">
                     <div>
-                        <span class="countTo" data-speed="5000" data-to="95">95</span>
-                        <span>%</span>
+                        <span class="countTo" data-speed="5000" data-to="3">3</span>
                     </div>
-                    <i class="fa fa-thumbs-up fa-3x"></i>
-                    <h3>Positive feedback</h3>
+                    <i class="fa fa-star fa-3x"></i>
+                    <h3>star</h3>
 
                 </div>
             </div>
@@ -117,10 +120,10 @@
             <div class="col-md-3 col-sm-6 col-xs-12 text-center wow bounceInUp" data-wow-duration="500ms" data-wow-delay="600ms">
                 <div class="counters-item kill-margin-bottom">
                     <div>
-                        <span class="countTo" data-speed="5000" data-to="2500">2500</span>
+                        <span class="countTo" data-speed="5000" data-to="0">0</span>
                     </div>
-                    <i class="fa fa-coffee fa-3x"></i>
-                    <h3>Cups of Coffee</h3>
+                    <i class="fa fa-exclamation fa-3x"></i>
+                    <h3>Issues</h3>
                 </div>
             </div>
             <!-- end fourth count item -->
